Fixing visible scrollbars

--- a/HeyerAppDjango/Portfolio/static/Portfolio/css/style.css
+++ b/HeyerAppDjango/Portfolio/static/Portfolio/css/style.css
@@ -224,6 +224,10 @@ th {
   height:90vh !important;
 }
 
+.no-scrolltainer {
+  overflow: visible !important;
+}
+
 .scrolltainer {
   overflow-y:auto !important;
   scroll-padding: 15px;
